--- a/Bodensee.ipynb
+++ b/Bodensee.ipynb
@@ -115,7 +115,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Rename all columns to English\n",
+    "#### 3/ Rename all columns to English\n",
     "As mentioned before, the data is in German. Column names are translated to English in this step."
    ]
   },
